# fluent-bit-external-plugins

./: CMakeLists.txt  README.md
filter_tensorflow/: CMakeLists.txt  README.md  gpu.cpp  gpu.h  tensorflow.c  tensorflow.h
filter_tensorflow/image_classification/: cat_vs_dog.tflite  http_server.py  send_image_to_mqtt.py
in_csi_camera/: CMakeLists.txt  README.md  csi_camera.c  csi_camera.h  video_capture.cpp  video_capture.h
